themes/soria/soria.css
/*
	Soria theme - not in solid state right now. Not ready for production ...
`	please feel free to add styles for new widgets should they appear,
	or fix classnames you would fix in tundra.css if you change a widget
	template classname.
*/

@import url("../dijit.css");

.dj_safari .soria .dijitPopup {
	-webkit-box-shadow: 0px 3px 7px #adadad;
}

/* try and group similar look and feel into these main groupings, and put extra stling grouped 
   by widget somehwere below (most already have sections) */
.soria .dijitButtonNode,
.soria .dijitToolbar,
.soria .dijitTab,
.soria .dijitSplitContainerSizerV,
.soria .dijitAccordionPane .dijitAccordionTitle,
.soria .dijitCalendarMonthContainer th,
.soria .dijitProgressBarEmpty,
.soria .dijitTooltipContainer,
.soria .dijitHorizontalSliderRemainingBar {
	background:#b7cdee url('images/gradientTopBg.png') repeat-x; 
	background-position:0 -1px; 
}

.soria .dijitButtonHover .dijitButtonNode,
.soria .dijitToggleButtonHover .dijitButtonNode,
.soria .dijitDropDownButtonHover .dijitButtonNode,
.soria .dijitComboButtonHover .dijitButtonContents,
.soria .dijitComboButtonDownArrowHover .dijitDownArrowButton,
.soria .dijitComboBoxHover .dijitDownArrowButton,
.soria .dijitSpinnerUpArrowHover .dijitUpArrowButton,
.soria .dijitSpinnerDownArrowHover .dijitDownArrowButton,
.soria .dijitTitlePane .dijitTitlePaneTitle,
.soria .dijitTabHover,
.soria .dijitTabCloseButtonHover,
.soria .dijitDialogTitleBar,
.soria .dijitAccordionPane-selected .dijitAccordionTitle,
.soria .dijitProgressBarTile,
.soria .dijitHorizontalSliderProgressBar {
	background:#4f8ce5 url('images/gradientTopBg.png') repeat-x;
	background-position:0 -1px; 
}

/* all icons are here */
.soria .dijitComboBox .dijitDownArrowButtonInner,
.soria .dijitMenuExpandEnabled,
.soria .dijitTitlePane .dijitClosed .dijitArrowNode,
.soria .dijitTitlePane .dijitOpen .dijitArrowNode,
.soria .dijitTab .dijitClosable .closeImage,
.soria .dijitTabCloseButton .dijitClosable .closeImage,
.soria .dijitTabCloseButtonHover .dijitClosable .closeImage,
.soria .dijitSplitContainerSizerH .thumb,
.soria .dijitSplitContainerSizerV .thumb,
.soria .dijitDialogCloseIcon,
.soria .dijitTooltipConnector,
.soria .dijitAccordionArrow,
.soria .dijitCalendarDecrease,
.soria .dijitCalendarIncrease,
.soria .dijitHorizontalSliderDecrementIcon,
.soria .dijitHorizontalSliderIncrementIcon,
.soria .dijitVerticalSliderIncrementIcon,
.soria .dijitVerticalSliderDecrementIcon,
.soria .dijitHorizontalSliderImageHandle,
.soria .dijitVerticalSliderImageHandle,
.soria .dijitInputFieldValidationIconNormal,
.soria .dijitInputFieldValidationIcon,
/* FIXME: need to make these spans inside the cell? */
.soria.dojoDndMove .dojoDndAvatarCanDrop .dojoDndAvatarHeader,
.soria.dojoDndCopy .dojoDndAvatarCanDrop .dojoDndAvatarHeader,
.soria.dojoDndCopy .dojoDndAvatarHeader,
.soria.dojoDndMove .dojoDndAvatarHeader,
/* FIXME: should be .dijitRtl .soria ... {} */
.dijitRtl .dijitCalendarDecrease,
.dijitRtl .dijitCalendarIncrease,
.dijitRtl .dijitMenuItem .dijitMenuExpandEnabled,
.dijitRtl .dijitTitlePane .dijitClosed .dijitArrowNode,
.dijitRtl .dijitDialogTitleBar .dijitDialogCloseIcon
{
	width:16px;
	height:16px;
	overflow:hidden; 
	margin:0; padding:0; 
	background-image: url('images/arrows.png');
	background-repeat: none; 
}

.soria .dijitCheckBoxIcon,
.soria .dijitRadioIcon,
.soria .dijitCheckBox,
.soria .dijitRadio {
	width:16px;
	height:16px;
	margin:0; padding:0; 
	background-image: url('images/arrows.png');
}

/* Control opacity of popups */
.soria .dijitPopup div,
.soria .dijitPopup table {
	opacity: 0.95;
}
/*
	dijit.form.Button
	dijit.form.DropDownButton
	dijit.form.ComboButton
	dijit.form.ComboBox (partial)
*/
.soria .dijitButtonNode {
	/* enabled state - inner */
	border:1px solid #4f8ce5;
	padding:.3em .4em .2em .4em;
}
.dj_ie6 .soria .dijitButtonNode {
	position:relative; 
}

.soria .dijitButtonDisabled .dijitButtonNode,
.soria .dijitToggleButtonDisabled .dijitButtonNode,
.soria .dijitDropDownButtonDisabled .dijitButtonNode,
.soria .dijitComboButtonDisabled .dijitButtonNode,
.soria .dijitComboBoxDisabled .dijitDownArrowButton,
.soria .dijitComboBoxDisabled .dijitInputField,
.soria .dijitSpinnerDisabled .dijitInputField,
.soria .dijitSpinnerDisabled .dijitButtonNode {
	/* disabled state - inner */
	border: 1px solid #d5d5d5;
	background:#ccc url("images/gradientTopBg.png") repeat-x top left;
	background-position:0px -1px; 
	opacity: 0.50; /* Safari, Opera and Mozilla */
}
.soria .dijitButtonDisabled .dijitButtonNode *,
.soria .dijitToggleButtonDisabled .dijitButtonNode *,
.soria .dijitDropDownButtonDisabled .dijitButtonNode *,
.soria .dijitComboButtonDisabled .dijitButtonNode *,
.soria .dijitSpinnerDisabled .dijitButtonNode * {
	filter: gray() alpha(opacity=50); /* IE */
}

.soria .dijitButtonHover .dijitButtonNode,
.soria .dijitToggleButtonHover .dijitButtonNode,
.soria .dijitDropDownButtonHover .dijitButtonNode,
.soria .dijitComboButtonHover .dijitButtonContents,
.soria .dijitComboButtonDownArrowHover .dijitDownArrowButton,
.soria .dijitComboBoxHover .dijitDownArrowButton,
.soria .dijitSpinnerUpArrowHover .dijitUpArrowButton,
.soria .dijitSpinnerDownArrowHover .dijitDownArrowButton {
	/* hover state - inner */
	border-color:#666;
	color:#fff;
	background-position:0px -1px; 
}

.soria .dijitButtonActive .dijitButtonNode,
.soria .dijitToggleButtonActive .dijitButtonNode,
.soria .dijitDropDownButtonActive .dijitButtonNode,
.soria .dijitComboButtonActive .dijitButtonContents,
.soria .dijitDownArrowActive .dijitDownArrowButton,
.soria .dijitComboBoxActive .dijitDownArrowButton {
	/* active state - inner (for when you are pressing a normal button, or
	 * when a toggle button is in a depressed state
	 */
	border-color:#333;
	background: #cbdcf7 url("images/gradientBottomBg.png") bottom repeat-x;
}
.soria .dijitToolbar {
	border: 1px solid #333;
}
.soria .dijitToolbar * {
	padding: 0px;
	margin: 0px;
}
/* ... */

